# tale-suite

./: .amltignore  .gitignore  .pre-commit-config.yaml  README.md  RESPONSIBLE_AI.md  SUPPORT.md  agent_llm.py  agent_template.py  all_environments.txt  benchmark.py  blorbtool.py  download.py  games.json  output.txt  play.py  print_results.py  pyproject.toml  requierements.txt  requirements.txt  setup.py
.github/workflows/: codeql.yml  formatter.yml  manual.yaml  manual.yml  publish-website.yml
agents/: api_reasoning.py  human.py  llm.py  llm_cot.py  llm_cot_old.py  llm_custom.py  llm_old.py  llm_walkthrough.py  llm_wlkth_oldr.py  llm_wlkthr.py  random.py  react.py  reasoning.py  tool_agent.py  traj_comp.py  vllm_agent.py  vllm_reasoning.py  walkthrough_agent.py
amulet/: config.yml
analysis/: build_hf_dataset.py  score_vs_budget.py
config/: aml.yml  amulet.yml  environment.yml  extra-openai-models.yaml
docs/website/: index.md
notebooks/: README.md  bar_charts.ipynb  figures.ipynb  game_infos.csv  game_infos.tsv  pull_run_data.ipynb  scratchpad.ipynb  wandb.cfg.template
plugins/azure_openai/: azure_openai.py  pyproject.toml
plugins/gcr_llama/: gcr_llama.py  pyproject.toml
plugins/gcr_phi/: gcr_phi.py  pyproject.toml
scripts/: example_script.sh  test_replay_determinism.py
tales/: README.md  agent.py  get_env_splits.py  token.py  utils.py  wandb_utils.py
tales/alfworld/: __init__.py  alfworld_env.py
tales/jericho/: jericho_data.py
tales/scienceworld/: __init__.py  scienceworld_env.py
tales/textworld/: __init__.py  textworld_env.py
tales/textworld_express/: __init__.py
twbench/: __init__.py  agent.py  config.py  download.py  logger.py  token.py  utils.py
twbench/alfworld/: __init__.py  alfworld_data.py  alfworld_env.py
website/: _config.yml  index.html  index.md
(+45 files in other folders)
