[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tales"
version = "0.0.1"
description = "Text-Adventure Learning Environment Suite"
readme = "README.md"
requires-python = ">=3.9"
dynamic = ["dependencies"]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
exclude = ["wandb/*", "logs/*", "website/*"]


[project.optional-dependencies]
dev = [
    "pytest",
    "pre-commit",
    "black",
    "isort",
]

[project.urls]
"Homepage" = "https://github.com/microsoft/tales"
"Bug Tracker" = "https://github.com/microsoft/tales/issues"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
known_third_party = ["wandb"]
